# .github

./: README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: build.yml  new-game.yml  shogi-move.yml
assets/: settings.toml
assets/locales/en/: README.template.md  translations.yml
assets/locales/ja/: README.template.md  translations.yml
assets/locales/zh-CN/: README.template.md  translations.yml
data/: stats.json
data/games/: 7e8ca920.json
profile/: README.ja.md  README.md  README.zh-CN.md
src/readme_shogi/: __main__.py  cli.py  constants.py  game.py  localization.py  model.py  renderer.py  security.py  stats.py
